crafted without care

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       const pdfBytes = await pdfDoc.save()
 
 			// Trigger the browser to download the PDF document
-      download(pdfBytes, "pdf-lib_form_creation_example.pdf", "application/pdf");
+      download(pdfBytes, "WCU_AdmissionOffer.pdf", "application/pdf");
     }
   </script>
 </html>
