--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <script>
     const { PDFDocument, StandardFonts } = PDFLib;
-
+    const myDate = new Date();
     async function fillForm(fname, lname) {
       // Fetch the PDF with form fields
       
@@ -39,15 +39,19 @@
       const pdfDoc = await PDFDocument.load(formPdfBytes);
       const timesRomanFont = await pdfDoc.embedFont(StandardFonts.TimesRoman);
       const fontSize = 12;
-
-      console.log(fname);
+      console.log(myDate.toDateString().substring(3,));
 
       // Get the form containing all the fields
       const form = pdfDoc.getForm();
       // Get all fields in the PDF by their names
+      const dateField = form.getTextField("Date");
       const nameField = form.getTextField("name");
       // Fill in the name field
-      nameField.setText(`${fname} ${lname},`, {
+      dateField.setText(`myDate.toDateString().substring(3,)`, {
+        size: fontSize,
+        font: timesRomanFont,
+      });
+      nameField.setText(`Dear ${fname} ${lname},`, {
         size: fontSize,
         font: timesRomanFont,
       });
