--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Wild Chicken Admission Portal</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="./style.css" />
     <script src="https://unpkg.com/pdf-lib"></script>
     <script src="https://unpkg.com/downloadjs"></script>
     
