--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
     <title>Wild Chicken Admission Portal</title>
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <script src="https://unpkg.com/pdf-lib"></script>
@@ -109,10 +110,10 @@
                   <button
                     onclick="fillForm(document.getElementById('fname').value, document.getElementById('lname').value); party.confetti(this);"
                   >
-                    Enter your name & Download
+                    Download (it takes TIME)
                   </button>
                   <div>
-                    <br/>Copyleft © <a href="https://github.com/Mr-Sheep/WildChickenAdmission">Snorlax</a>, no rights reserved. Assets have their own licenses.
+                    <br/>Copyleft 🄯 <a href="https://github.com/Mr-Sheep/WildChickenAdmission">Snorlax</a>, no rights reserved. Assets have their own licenses.
                   </div>
                 </div>
                 
