Fix copyleft using css

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
-    <title>Wild Chicken Admission Portal</title>
+    <title>WCU Admission</title>
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <script src="https://unpkg.com/pdf-lib"></script>
     <script src="https://unpkg.com/downloadjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/party-js@latest/bundle/party.min.js"></script>
-    
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg">
+    <link rel="mask-icon" href="./favicon.svg" color="#ff8a01">
   </head>
 
   <body>
@@ -113,7 +114,7 @@
                     Download (it takes TIME)
                   </button>
                   <div>
-                    <br/>Copyleft 🄯 <a href="https://github.com/Mr-Sheep/WildChickenAdmission">Snorlax</a>, no rights reserved. Assets have their own licenses.
+                    <br/> Copyleft <span class="copyleft">©</span> <a href="https://github.com/Mr-Sheep/WildChickenAdmission">Snorlax</a>, no rights reserved. Assets have their own licenses.
                   </div>
                 </div>
                 
