adding a landing page

--- a/Admission/index.html
+++ b/Admission/index.html
@@ -7,8 +7,8 @@
     <script src="https://unpkg.com/pdf-lib"></script>
     <script src="https://unpkg.com/downloadjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/party-js@latest/bundle/party.min.js"></script>
-    <link rel="icon" type="image/svg+xml" href="../assets/favicon.svg">
-    <link rel="mask-icon" href="../assets/favicon.svg" color="#ff8a01">
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
+    <link rel="mask-icon" href="/assets/favicon.svg" color="#ff8a01">
   </head>
 
   <body>
@@ -82,7 +82,7 @@
             class="box-root padding-top--48 padding-bottom--24 flex-flex flex-justifyContent--center"
           >
             <h1>
-              <a href="../index.html" ><img src="../assets/Wild_Chicken.svg" alt="Wild Chicken University" style="width:300px;height:82px;"></a>
+              <a href="/index.html" ><img src="/assets/Wild_Chicken.svg" alt="Wild Chicken University" style="width:300px;height:82px;"></a>
             </h1>
           </div>
           <div class="formbg-outer">
