--- a/admission/index.html
+++ b/admission/index.html
@@ -88,8 +88,8 @@
           <div class="formbg-outer">
             <div class="formbg">
               <div class="formbg-inner padding-horizontal--48">
-                <span class="padding-bottom--15">Welcome to the <bold>Official</bold> admission
-                  offer download page!</span>
+                <span class="padding-bottom--24" style="text-align: center;"><b>OFFICIAL</b> Admission
+                  Offer Portal</span>
 
                 <form
                   id="stripe-login"
@@ -106,8 +106,8 @@
                   </div>
 
                   
-                </form
-                <div class="field padding-bottom--24">
+		</form>
+                <div class="field padding-bottom--24" >
                   <button
                     onclick="fillForm(document.getElementById('fname').value, document.getElementById('lname').value); party.confetti(this);"
                   >
