--- a/index.html
+++ b/index.html
@@ -55,12 +55,8 @@
 
 
           <h2 class="title">Why us?</h2>
-          
-          <ul>
-            <li>
-              We offer <b>FREE</b> admission offers in PDF, click <a href="./admission/index.html">this link</a> to get yours today
-            </li>
-          </ul>
+	  <h3> No fees to apply. No supplements to submit. No extra essays to write</h3>
+          <h3>We offer <b>FREE</b> admission offers in PDF, click <a href="./admission/index.html">this link</a> to get yours today</h3>
           <br />
           <h2 class="title">Disclaimers</h2>
           <ul>
