--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <title>WCU</title>
+    <title>Wild Chicken University</title>
     <meta charset="UTF-8" />
     <meta name="description" content="Wild Chicken University" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
