--- a/index.html
+++ b/index.html
@@ -58,12 +58,16 @@
 	  <h3> No fees to apply. No supplements to submit. No extra essays to write</h3>
           <h3>We offer <b>FREE</b> admission offers in PDF, click <a href="./admission/index.html">this link</a> to get yours today</h3>
           <br />
+
+
           <h2 class="title">Disclaimers</h2>
           <ul>
-            <li>Our logo is borrowed from UPenn; signed by director of admission, Colonel Harland David Sanders, the founder of KFC(cuz we are chicken university).
-            <li>The content of the admission offer is copied from Stanford as I am too lazy to write them myself.
-            <li>No chickens were harmed during the creation of this website.
-            <li>We are NOT affiliated with any educational institution. Files downloaded from WildChicken DOES NOT have ANY legal effect.
+		  <li>Our logo is borrowed from UPenn; signed by our beloved director of admission, Colonel Harland David Sanders, the founder of KFC(cuz we are chicken university).</li>
+		  <li>The content of the admission offer is copied from Stanford as I am too lazy to write them myself.</li>
+		  <li>No chickens were harmed during the creation of this website.</li>
+		  <li>We are NOT affiliated with any educational institution. Files downloaded from WildChicken DOES NOT have ANY legal effect.</li>
+		  <li>The logo was a parody, which according to <a href="https://www.legislation.gov.uk/uksi/2014/2356/regulation/5/made">Section 30A of the CDPA</a> fair dealing with a copyrighted work for the purposes of caricature, parody, or pastiche is allowed.</li>
+		  <li>NOTHING ON THIS PAGE IS SERIOUS</li>
           </ul>
         </div>
         <div class="footer">
