--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 
           <h2 class="title">Why us?</h2>
 	  <h3> No fees to apply. No supplements to submit. No extra essays to write</h3>
-          <h3>We offer <b>FREE</b> admission offers in PDF, click <a href="./admission/index.html">this link</a> to get yours today</h3>
+          <h3> We offer <b>FREE</b> admission offers in PDF, click <a href="./admission/index.html">this link</a> to get yours today</h3>
+	  <p> We also offer <b>FREE</b> rejection letter in PDF, click <a href="./admission/reject.html">this link</a> to get yours TODAY<p>
           <br />
 
 
@@ -64,6 +65,7 @@
           <ul>
 		  <li>Our logo is borrowed from UPenn; signed by our beloved director of admission, Colonel Harland David Sanders, the founder of KFC(cuz we are chicken university).</li>
 		  <li>The content of the admission offer is copied from Stanford as I am too lazy to write them myself.</li>
+		  <li>The content of the rejection letter is copied from Northwestern since they are my ed school and they rejected me lmfao</li>
 		  <li>No chickens were harmed during the creation of this website.</li>
 		  <li>We are NOT affiliated with any educational institution. Files downloaded from WildChicken DOES NOT have ANY legal effect.</li>
 		  <li>The logo was a parody, which according to <a href="https://www.legislation.gov.uk/uksi/2014/2356/regulation/5/made">Section 30A of the CDPA</a> fair dealing with a copyrighted work for the purposes of caricature, parody, or pastiche is allowed.</li>
