--- a/rejection/index.html
+++ b/rejection/index.html
@@ -90,11 +90,11 @@
       </div>
     </div>
   </header>
-  <script src="../assets//script.js"></script>
+  <script src="../assets/script_reject.js"></script>
   <script> 
-      const url = new URL(document.URL);
-      const fname = url.searchParams.get("fname");
-      const lname = url.searchParams.get("lname");    
+    const url = new URL(document.URL);
+    const fname = url.searchParams.get("fname");
+    const lname = url.searchParams.get("lname");    
   </script>
   <div id="page" class="contain-1120 group">
     <main id="main-content" class="content-full" role="main" tabindex="0">
@@ -126,7 +126,7 @@
         <div class="part ">
           <br>
           <h3>Status Update</h3>
-          <p>Congratulations! It is with great pleasure to offer you admission to the Wild Chicken University class of 2026. Please click on the button below to review your admission letter!</p>
+          <p>The admission committee has concluded its evaluation of Early Decision applicants to Wild Chicken University. Unfortunately, we are unable to offer you a place in the first-year class. Since Northwestern was your top choice, we understand this news is very disappointing. </p>
           <button onclick="fillForm(fname, lname); party.confetti(this);">
               Download (it takes TIME)&gt;&gt;
             </button>
