--- a/rejection/login.html
+++ b/rejection/login.html
@@ -7,9 +7,6 @@
   <link href="../assets/admissions.css" rel="stylesheet" type="text/css">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://unpkg.com/pdf-lib"></script>
-  <script src="https://unpkg.com/downloadjs"></script>
-  <script src="https://cdn.jsdelivr.net/npm/party-js@latest/bundle/party.min.js"></script>
   <title>Applicant Status Portal</title>
   <style>
     /*<![CDATA[*/
@@ -81,7 +78,7 @@
   <header id="mini">
     <div id="top-bar">
       <div class="contain-1120 group">
-        <div id="left"><a href="https://wcu.edu.pl"><img alt="Wild Chicken University" src="../assets/Wild_Chicken_White.svg"><span class="hide-label">Wild Chicken University</span></a></div>
+        <div id="left"><a href="https://wcu.edu.pl"><img alt="Wild Chicken University" src="../assets/Wild_Chicken.svg"><span class="hide-label">Wild Chicken University</span></a></div>
       </div>
     </div>
     <div class="bottom-bar contain-1120 group">
@@ -90,11 +87,10 @@
       </div>
     </div>
   </header>
-  <script src="../assets//script.js"></script>
-  <script> 
-      const url = new URL(document.URL);
-      const fname = url.searchParams.get("fname");
-      const lname = url.searchParams.get("lname");    
+  <script>
+    $('.submit').click(function() {
+        $('.submit').css({color: '#005f73' });
+      });
   </script>
   <div id="page" class="contain-1120 group">
     <main id="main-content" class="content-full" role="main" tabindex="0">
@@ -112,29 +108,16 @@
           </ul>
         </div>
       </div>
-      <br>
-      <div class="part_rows_container col-1" data-col="1">
-        <div class="part "><span style="font-size:16px;"><span style="font-family:Arial,Helvetica,sans-serif;"><span style="color:#005f73;">This
-                page is your application status portal and will be used to monitor the
-                progress of your application and to communicate any important updates or
-                changes to your application. When decisions become available they will
-                also be posted here. We anticipate releasing admission decisions for
-                Early Decision candidates on December 17th.
-                <!-- --><br><br>
-                If you have any questions please reach out to us at&nbsp;
-              </span><a href="mailto:ug-admission@wcu.edu.pl"><span style="color:#005f73;">ug-admission@wcu.edu.pl</span></a><span style="color:#005f73;">&nbsp;or (555) not-free and provide the following reference number: <strong>I_Want_A_University</strong>.</span></span></span></div>
-        <div class="part ">
-          <br>
-          <h3>Status Update</h3>
-          <p>Congratulations! It is with great pleasure to offer you admission to the Wild Chicken University class of 2026. Please click on the button below to review your admission letter!</p>
-          <button onclick="fillForm(fname, lname); party.confetti(this);">
-              Download (it takes TIME)&gt;&gt;
-            </button>
+      <form action="index.html" method="GET">
+        <div class="container">
+          <label for="fname">First Name:</label>
+          <input type="text" id="fname" name="fname" />
+          <label for="lname">Last Name: </label>
+          <input type="text" id="lname" name="lname" devalue="something" />
+          <input class="submit" type="submit" value="Login"/>
         </div>
-
-      </div>
-      <script src="https://utteranc.es/client.js" repo="Mr-Sheep/WildChickenUniversity" issue-term="title" label="ADMISSION COMMENT" theme="github-light" crossorigin="anonymous" async>
-      </script>
+      </form>
+      <br>
       <div class="footer">
         <span>Wild Chicken University is committed to a policy of non-discrimination.
           <br> If you no longer wish to continue your application to Wild Chicken, you can go <a href="https://www.mcdonalds.com/us/en-us/product/chicken-mcnuggets-4-piece.html" target="_blank">BUY </a> some Chicken McNuggets® .</span>
