--- a/admission_old/index.html
+++ b/admission_old/index.html
@@ -11,7 +11,7 @@
     <link rel="mask-icon" href="../assets/favicon.svg" color="#ff8a01">
   </head>
   <body>
-    <script src="./script.js"></script>
+    <script src="../assets//script.js"></script>
     <div class="login-root">
       <div
         class="box-root flex-flex flex-direction--column"
