--- a/index.html
+++ b/index.html
@@ -1,81 +1,87 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <title>Wild Chicken University</title>
-    <meta charset="UTF-8" />
-    <meta name="description" content="Wild Chicken University" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="./style.css"
-      media=""
-    />
-    <link rel="icon" type="image/svg+xml" href="./assets/favicon.svg" />
-    <link rel="mask-icon" href="./assets/favicon.svg" color="#ff8a01" />
-  </head>
 
-  <body>
-    <div class="wrapper">
-      <div class="main">
-        <div class="header">
-          <h1 class="title"><a href="https://wcu.edu.pl" ><img src="./assets/Wild_Chicken_White.svg" alt="Wild Chicken University" style="height:6rem; padding-top:2.3rem; padding-left:1rem;"></a>
-          </h1>
-        </div>
-        <div class="content">
-          <h2 class="title">About</h2>
-          <p>
-            Wild Chicken University (also known as a diploma mill or degree
-            mill) is an organization that awards academic degrees and diplomas
-            with substandard or no academic study and without recognition by
-            official educational accrediting bodies. The purchaser can then
-            claim to hold an academic degree, and the organization is motivated
-            by making a profit. These degrees are often awarded based on vaguely
-            construed life experience. Some such organizations claim
-            accreditation by non-recognized/unapproved accrediting bodies set up
-            for the purposes of providing a veneer of authenticity. While the
-            terms "degree mill" and "diploma mill" are commonly used
-            interchangeably, within the academic community a distinction is
-            sometimes drawn: <br />
-            <ul>
-              <li>
-                A "degree mill" issues "real" diplomas from non regionally
-                accredited "universities", which may be legal in some states but
-                are generally illegitimate universities.
-              </li>
-              <li>
-                A "diploma mill" issues counterfeit diplomas which bear the
-                names of legitimate universities.
-              </li>
-            </ul>
-            <br />
-            copied from: <a href="https://www.facebook.com/Wild-Chicken-University-170013173058220/about">Wild Chicken University on Facebook(or should we call it Meta?)</a>
-            
-          </p>
+<head>
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+  <title>Wild Chicken University</title>
+  <meta charset="UTF-8" />
+  <meta name="description" content="Wild Chicken University" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./style.css" media="" />
+  <link rel="icon" type="image/svg+xml" href="./assets/favicon.svg" />
+  <link rel="mask-icon" href="./assets/favicon.svg" color="#ff8a01" />
+</head>
+
+<body>
+  <div class="wrapper">
+    <div class="main">
+      <div class="header">
+        <h1 class="title"><a href="https://wcu.edu.pl"><img src="./assets/Wild_Chicken_White.svg" alt="Wild Chicken University" style="height:6rem; padding-top:2.3rem; padding-left:1rem;"></a>
+        </h1>
+      </div>
+      <div class="content">
+        <h2 class="title">About</h2>
+        <p>
+          Wild Chicken University (also known as a diploma mill or degree
+          mill) is an organization that awards academic degrees and diplomas
+          with substandard or no academic study and without recognition by
+          official educational accrediting bodies. The purchaser can then
+          claim to hold an academic degree, and the organization is motivated
+          by making a profit. These degrees are often awarded based on vaguely
+          construed life experience. Some such organizations claim
+          accreditation by non-recognized/unapproved accrediting bodies set up
+          for the purposes of providing a veneer of authenticity. While the
+          terms "degree mill" and "diploma mill" are commonly used
+          interchangeably, within the academic community a distinction is
+          sometimes drawn: <br />
+        <ul>
+          <li>
+            A "degree mill" issues "real" diplomas from non regionally
+            accredited "universities", which may be legal in some states but
+            are generally illegitimate universities.
+          </li>
+          <li>
+            A "diploma mill" issues counterfeit diplomas which bear the
+            names of legitimate universities.
+          </li>
+        </ul>
+        <br />
+        copied from: <a href="https://www.facebook.com/Wild-Chicken-University-170013173058220/about">Wild Chicken University on Facebook(or should we call it Meta?)</a>
+
+        </p>
 
 
-          <h2 class="title">Why us?</h2>
-	  <h3> No fees to apply. No supplements to submit. No extra essays to write</h3>
-          <h3> We offer <b>FREE</b> admission offers in PDF, click <a href="./admission/index.html">this link</a> to get yours today</h3>
-	  <p> We also offer <b>FREE</b> rejection letter in PDF, click <a href="./admission/reject.html">this link</a> to get yours TODAY<p>
-          <br />
+        <h2 class="title">Admission</h2>
+        <p> <b>NO</b> fees💰️ to apply. No supplements📝 to submit. No extra essays to write </p>
+        <p> We offer <b>FREE</b> admission offers in PDF, click <a href="./admission/index.html">this link</a> to get yours today </p>
+        <p>
+        We also offer <b>FREE</b> rejection letter in PDF, click <a href="./rejection/index.html">this link</a> to get yours TODAY
+        </p>
+        <p>
+          If you still prefer the old portal, click <a href="./admission_old/index.html">this link</a>.
+        </p>
 
-
-          <h2 class="title">Disclaimers</h2>
-          <ul>
-		  <li>Our logo is borrowed from UPenn; signed by our beloved director of admission, Colonel Harland David Sanders, the founder of KFC(cuz we are chicken university).</li>
-		  <li>The content of the admission offer is copied from Stanford as I am too lazy to write them myself.</li>
-		  <li>The content of the rejection letter is copied from Northwestern since they are my ed school and they rejected me lmfao</li>
-		  <li>No chickens were harmed during the creation of this website.</li>
-		  <li>We are NOT affiliated with any educational institution. Files downloaded from WildChicken DOES NOT have ANY legal effect.</li>
-		  <li>The logo was a parody, which according to <a href="https://www.legislation.gov.uk/uksi/2014/2356/regulation/5/made">Section 30A of the CDPA</a> fair dealing with a copyrighted work for the purposes of caricature, parody, or pastiche is allowed.</li>
-		  <li>NOTHING ON THIS PAGE IS SERIOUS</li>
-          </ul>
-        </div>
-        <div class="footer">
-          <br/> Copyleft <span class="copyleft">©</span> <a href="https://github.com/Mr-Sheep/WildChickenUniversity">Snorlax</a>, no rights reserved. Assets have their own licenses.
-        </div>
+        <h2 class="title">Disclaimers</h2>
+        <ul>
+          <li>Our logo is borrowed from UPenn; signed by our beloved director of admission, Colonel Harland David Sanders, the founder of KFC(cuz we are chicken university).</li>
+          <li>The design for the admission portal is mostly copied from Northwestern since they rejected me. And I thought this can be a joke to me </li>
+          <li>The content of the admission offer is copied from Stanford as I am too lazy to write them myself.</li>
+          <li>The content of the rejection letter is copied from Northwestern since they are my ed school and they rejected me lmfao</li>
+          <li>No chickens were harmed during the creation of this website.</li>
+          <li>We are NOT affiliated with any educational institution. Files downloaded from WildChicken DOES NOT have ANY legal effect.</li>
+          <li>The logo and the web design(and everything also) was a parody, which according to <a href="https://www.legislation.gov.uk/uksi/2014/2356/regulation/5/made">Section 30A of the CDPA</a> fair dealing with a copyrighted work for the purposes of caricature, parody, or pastiche is allowed.</li>
+          <li>If you no longer wish to continue your application to Wild Chicken, you can go <a href="https://www.mcdonalds.com/us/en-us/product/chicken-mcnuggets-4-piece.html" target="_blank">BUY </a> some Chicken McNuggets®.</li>
+          <li>NOTHING ON THIS PAGE IS SERIOUS, except this: GOOD LUCK ON YOUR COLLEGE APP</li>
+        </ul>
+      </div>
+      <script src="https://utteranc.es/client.js" repo="Mr-Sheep/WildChickenUniversity" issue-term="title" label="ADMISSION COMMENT" theme="github-light" crossorigin="anonymous" async>
+      </script>
+      <div class="footer">
+        <a href="./privacy.html"> Privacy Policy </a>
+        <br /> Copyleft <span class="copyleft">©</span> <a href="https://github.com/Mr-Sheep/WildChickenUniversity">Snorlax</a>, no rights reserved. Assets have their own licenses.
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
