--- a/rejection/index.html
+++ b/rejection/index.html
@@ -78,7 +78,7 @@
   <header id="mini">
     <div id="top-bar">
       <div class="contain-1120 group">
-        <div id="left"><a href="https://wcu.edu.pl"><img alt="Wild Chicken University" src="../assets/Wild_Chicken.svg"><span class="hide-label">Wild Chicken University</span></a></div>
+        <div id="left"><a href="https://wcu.edu.pl"><img alt="Wild Chicken University" src="../assets/Wild_Chicken_White.svg"><span class="hide-label">Wild Chicken University</span></a></div>
       </div>
     </div>
     <div class="bottom-bar contain-1120 group">
