--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
 
         <h2 class="title">Admission</h2>
         <p> <b>NO</b> fees💰️ to apply. No supplements📝 to submit. No extra essays to write </p>
-        <p> We offer <b>FREE</b> admission offers in PDF, click <a href="./admission/index.html">this link</a> to get yours today </p>
-        <p>
-        We also offer <b>FREE</b> rejection letter in PDF, click <a href="./rejection/index.html">this link</a> to get yours TODAY
-        </p>
+        <p> We offer <b>FREE</b> admission offers in PDF, click <a href="./admission/login.html">this link</a> to get yours today </p>
         <p>
           If you still prefer the old portal, click <a href="./admission_old/index.html">this link</a>.
         </p>
