remove leftover northwestern names

--- a/admission/index.html
+++ b/admission/index.html
@@ -131,10 +131,10 @@
         <div id="rejected">
             <br>
             <h3>Status Update</h3>
-            <p>The admission committee has concluded its evaluation of Early Decision applicants to Wild Chicken University. Unfortunately, we are unable to offer you a place in the first-year class. Since Northwestern was your top choice, we understand this news is very disappointing.   
+            <p>The admission committee has concluded its evaluation of Early Decision applicants to Wild Chicken University. Unfortunately, we are unable to offer you a place in the first-year class. Since Wild Chicken was your top choice, we understand this news is very disappointing.   
             </p>
             <p>
-              Given the relatively small size of the incoming class and the strength of the applicant pool, we cannot admit all of the qualified applicants who apply to Northwestern. You should not feel our decision reflects negatively on you or your potential as a college student. We simply are unable to admit all of the students who present a solid record of achievement.
+              Given the relatively small size of the incoming class and the strength of the applicant pool, we cannot admit all of the qualified applicants who apply to Wild Chicken. You should not feel our decision reflects negatively on you or your potential as a college student. We simply are unable to admit all of the students who present a solid record of achievement.
             </p> 
             <button onclick="fillForm(fname, lname, admitted); party.confetti(this);">
                 Download (it takes TIME)&gt;&gt;
