--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8" />
   <meta name="description" content="Wild Chicken University" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./style.css" media="" />
+  <link rel="stylesheet" href="./assets/style.css" media="" />
   <link rel="icon" type="image/svg+xml" href="./assets/favicon.svg" />
   <link rel="mask-icon" href="./assets/favicon.svg" color="#ff8a01" />
 </head>
@@ -53,7 +53,7 @@
 
         <h2 class="title">Admission</h2>
         <p> <b>NO</b> fees💰️ to apply. No supplements📝 to submit. No extra essays to write </p>
-        <p> We offer <b>FREE</b> admission offers in PDF, click <a href="./admission/login.html">this link</a> to get yours today </p>
+        <p> We offer <b>FREE</b> admission offers in PDF, click <a href="./admission/index.html">this link</a> to get yours today </p>
         <p>
           If you still prefer the old portal, click <a href="./admission_old/index.html">this link</a>.
         </p>
