--- a/admission/index.html
+++ b/admission/index.html
@@ -7,74 +7,7 @@
   <link href="../assets/admissions.css" rel="stylesheet" type="text/css">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://unpkg.com/pdf-lib"></script>
-  <script src="https://unpkg.com/downloadjs"></script>
-  <script src="https://cdn.jsdelivr.net/npm/party-js@latest/bundle/party.min.js"></script>
-  <title>Applicant Status Portal</title>
-  <style>
-    /*<![CDATA[*/
-    footer {
-      display: none;
-    }
-
-    .full-width {
-      width: 100%;
-    }
-
-    .banner_text {
-      font: 48px/1.2em "Campton Bold", Impact, sans-serif;
-      color: #fff;
-      text-shadow: 2px 2px 0px #000;
-      margin: 0 0 1rem 1rem;
-      position: relative;
-    }
-
-    .tall {
-      height: 200px
-    }
-
-    .hero {
-      width: 100%;
-      display: table;
-    }
-
-
-    .hero .hero-image {
-      display: table-cell;
-      width: 100%;
-      vertical-align: middle;
-      position: relative;
-      padding: 0 1rem;
-      text-align: center;
-    }
-
-    .hero .hero-image2 {
-      display: table-cell;
-      width: 100%;
-      position: relative;
-      padding: 0 1rem;
-    }
-
-    @media only screen and (max-width: 480px) {
-      .small_text {
-        font: 32px/1.2em "Campton Bold", Impact, sans-serif;
-      }
-    }
-
-    @media only screen and (max-width: 1000px) {
-      .med_text {
-        font: 48px/1.2em "Campton Bold", Impact, sans-serif;
-      }
-    }
-
-    @media only screen and (max-width: 480px) {
-      .grid_container {
-        display: block;
-      }
-    }
-
-    /*]]>*/
-  </style>
+  <title>Wild Chicken Applicant Status Portal</title>
 </head>
 
 <body>
@@ -90,63 +23,52 @@
       </div>
     </div>
   </header>
-  <script src="../assets/script.js"></script>
+
   <div id="page" class="contain-1120 group">
     <main id="main-content" class="content-full" role="main" tabindex="0">
       <div id="portal_row_container">
         <div class="part_rows_container col-1" data-col="1">
-          <div class="part ">
             <section class="hero">
               <div class="banner_text small_text">
                 <p>Welcome</p>
               </div>
-          </div>
           </section>
           <ul class="subtabs">
-            <li><a class="selected" href="https://admission.wcu.edu.pl" onclick="$(this).parents('ul').find('.selected').removeClass('selected'); $(this).addClass('selected');">Application Status</a></li>
+            <li><a class="selected" href="#" onclick="$(this).parents('ul').find('.selected').removeClass('selected'); $(this).addClass('selected');">Application Status</a></li>
           </ul>
         </div>
       </div>
-      <br>
-      <div class="part_rows_container col-1" data-col="1">
-        <div class="part "><span style="font-size:16px;"><span style="font-family:Arial,Helvetica,sans-serif;"><span style="color:#005f73;">This
-                page is your application status portal and will be used to monitor the
-                progress of your application and to communicate any important updates or
-                changes to your application. When decisions become available they will
-                also be posted here. We anticipate releasing admission decisions for
-                Early Decision candidates on December 17th.
-                <br><br>
-                If you have any questions please reach out to us at&nbsp;
-              </span><a href="mailto:ug-admission@wcu.edu.pl"><span style="color:#005f73;">ug-admission@wcu.edu.pl</span></a><span style="color:#005f73;">&nbsp;or (555) not-free and provide the following reference number: <strong>I_Want_A_University</strong>.</span></span></span></div>
-        <div id="admitted">
-          <br>
-          <h3>Status Update</h3>
-          <p>Congratulations! It is with great pleasure to offer you admission to the Wild Chicken University class of 2026. Please click on the button below to review your admission letter!</p>
-          <button onclick="fillForm(fname, lname, admitted); party.confetti(this);">
-            Download (it takes TIME)&gt;&gt;
-          </button>
-          <br>
-        </div>
-        
-        <div id="rejected">
-            <br>
-            <h3>Status Update</h3>
-            <p>The admission committee has concluded its evaluation of Early Decision applicants to Wild Chicken University. Unfortunately, we are unable to offer you a place in the first-year class. Since Wild Chicken was your top choice, we understand this news is very disappointing.   
-            </p>
-            <p>
-              Given the relatively small size of the incoming class and the strength of the applicant pool, we cannot admit all of the qualified applicants who apply to Wild Chicken. You should not feel our decision reflects negatively on you or your potential as a college student. We simply are unable to admit all of the students who present a solid record of achievement.
-            </p> 
-            <button onclick="fillForm(fname, lname, admitted); party.confetti(this);">
-                Download (it takes TIME)&gt;&gt;
-              </button>
-            <br>
-          </div>
+      <form action="result.html" method="GET">
+        <p class="success">To get your admission letter, please enter your first name and last name.</p>
+        <table class="plain">
+          <colgroup>
+            <col style="width: 150px;">
+            <col>
+          </colgroup>
+          <tbody>
+            <tr>
+              <th><label for="fname" data-required="1">First Name:</label></th>
+              <td><input type="text" id="fname" name="fname" maxlength="20" size="10" data-required="1" spellcheck="false" required="required" aria-busy="" /></td>
+            </tr>
+            <tr>
+              <th><label for="lname" data-required="1" spellcheck="false">Last Name: </label></th>
+              <td><input type="text" id="lname" name="lname" maxlength="20" size="10" data-required="1" spellcheck="false" required="required" /></td>
+            </tr>
+            <tr>
+              <th><label for="checkbox" data-required="1" spellcheck="false">Admitted?: </label></th>
+              <td><input id="admitted" type="checkbox" name="admitted" value="true" /></td>
+              <td><input id='checkboxHidden' type='hidden' name='admitted' value='false'></td>
+            </tr>
+          </tbody>
+        </table>
+        <br>
+        <div class="action"><button class="default" onclick="if (FW.Validate(this)) FW.Postback(this); return (false);" type="submit">I WANT AN ADMISSION LETTER</button></div>
+      </form>
 
-      </div>
-      <script src="https://utteranc.es/client.js" repo="Mr-Sheep/WildChickenUniversity" issue-term="title" label="ADMISSION COMMENT" theme="github-light" crossorigin="anonymous" async>
-      </script>
+      <br>
       <div class="footer">
         <span><br>Wild Chicken University is committed to a policy of non-discrimination.
+          <a href="./privacy.html"> Privacy Policy </a>
           <br> If you no longer wish to continue your application to Wild Chicken, you can go <a href="https://www.mcdonalds.com/us/en-us/product/chicken-mcnuggets-4-piece.html" target="_blank">BUY </a> some Chicken McNuggets® .</span>
         <br /> Copyleft <span class="copyleft">©</span> <a href="https://github.com/Mr-Sheep/WildChickenUniversity">Snorlax</a>, no rights reserved. Assets have their own licenses.
       </div>
@@ -154,13 +76,10 @@
     </main>
   </div>
   <script>
-      const url = new URL(document.URL);
-      const fname = url.searchParams.get("fname");
-      const lname = url.searchParams.get("lname");
-      const admitted = url.searchParams.get('admitted')==='true' ? true : false;
-      admitted ? document.getElementById('rejected').style.display = 'none': document.getElementById('admitted').style.display = 'none';
+    if (document.getElementById("admitted").checked) {
+      document.getElementById('checkboxHidden').disabled = true;
+    }
   </script>
-
   <div class="progress_box" style="visibility: hidden;"></div>
 </body>
 
