new button design

--- a/admission/index.html
+++ b/admission/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="bottom-bar contain-1120 group">
       <div id="department">
-        <h1><a href="https://admissions.wcu.edu.pl/index.html">Undergraduate Admissions</a></h1>
+        <h1><a href="#">Undergraduate Admissions</a></h1>
       </div>
     </div>
   </header>
@@ -28,10 +28,10 @@
     <main id="main-content" class="content-full" role="main" tabindex="0">
       <div id="portal_row_container">
         <div class="part_rows_container col-1" data-col="1">
-            <section class="hero">
-              <div class="banner_text small_text">
-                <p>Welcome</p>
-              </div>
+          <section class="hero">
+            <div class="banner_text small_text">
+              <p>Welcome</p>
+            </div>
           </section>
           <ul class="subtabs">
             <li><a class="selected" href="#" onclick="$(this).parents('ul').find('.selected').removeClass('selected'); $(this).addClass('selected');">Application Status</a></li>
@@ -55,7 +55,7 @@
               <td><input type="text" id="lname" name="lname" maxlength="20" size="10" data-required="1" spellcheck="false" required="required" /></td>
             </tr>
             <tr>
-              <th><label for="checkbox" data-required="1" spellcheck="false">Admitted?: </label></th>
+              <th><label for="checkbox" data-required="1" spellcheck="false">Admitted? </label></th>
               <td><input id="admitted" type="checkbox" name="admitted" value="true" /></td>
               <td><input id='checkboxHidden' type='hidden' name='admitted' value='false'></td>
             </tr>
@@ -67,9 +67,10 @@
 
       <br>
       <div class="footer">
-        <span><br>Wild Chicken University is committed to a policy of non-discrimination.
-          <a href="./privacy.html"> Privacy Policy </a>
-          <br> If you no longer wish to continue your application to Wild Chicken, you can go <a href="https://www.mcdonalds.com/us/en-us/product/chicken-mcnuggets-4-piece.html" target="_blank">BUY </a> some Chicken McNuggets® .</span>
+        <br><br>
+        <hr>Wild Chicken University is committed to a policy of non-discrimination.
+        <a href="../privacy.html"> Privacy Policy </a>
+        <br> If you no longer wish to continue your application to Wild Chicken, you can go <a href="https://www.mcdonalds.com/us/en-us/product/chicken-mcnuggets-4-piece.html" target="_blank">BUY </a> some Chicken McNuggets®.
         <br /> Copyleft <span class="copyleft">©</span> <a href="https://github.com/Mr-Sheep/WildChickenUniversity">Snorlax</a>, no rights reserved. Assets have their own licenses.
       </div>
       <div style="clear: both;"></div>
