--- a/admission/result.html
+++ b/admission/result.html
@@ -22,7 +22,7 @@
     </div>
     <div class="bottom-bar contain-1120 group">
       <div id="department">
-        <h1><a href="https://admissions.wcu.edu.pl/index.html">Undergraduate Admissions</a></h1>
+        <h1><a href="#">Undergraduate Admissions</a></h1>
       </div>
     </div>
   </header>
@@ -39,7 +39,7 @@
           </div>
           </section>
           <ul class="subtabs">
-            <li><a class="selected" href="https://admission.wcu.edu.pl" onclick="$(this).parents('ul').find('.selected').removeClass('selected'); $(this).addClass('selected');">Application Status</a></li>
+            <li><a class="selected" href="#" onclick="$(this).parents('ul').find('.selected').removeClass('selected'); $(this).addClass('selected');">Application Status</a></li>
           </ul>
         </div>
       </div>
@@ -53,7 +53,10 @@
                 Early Decision candidates on December 17th.
                 <br><br>
                 If you have any questions please reach out to us at&nbsp;
-              </span><a href="mailto:ug-admission@wcu.edu.pl"><span style="color:#005f73;">ug-admission@wcu.edu.pl</span></a><span style="color:#005f73;">&nbsp;or (555) not-free and provide the following reference number: <strong>I_Want_A_University</strong>.</span></span></span></div>
+              </span><a href="mailto:ug-admission@wcu.edu.pl"><span style="color:#005f73;">ug-admission@wcu.edu.pl</span></a><span style="color:#005f73;">&nbsp;or (555) not-free and provide the following reference number: <strong>I_Want_A_University</strong>.
+                <p style="color: #7f4f24;"> If you no longer wish to continue your application to Wild Chicken, you can go <a href="https://www.mcdonalds.com/us/en-us/product/chicken-mcnuggets-4-piece.html" target="_blank">BUY </a> some Chicken McNuggets®. </p>
+
+              </span></span></span></div>
         <div id="admitted">
           <br>
           <h3>Status Update</h3>
@@ -63,38 +66,44 @@
           </button>
           <br>
         </div>
-        
+
         <div id="rejected">
-            <br>
-            <h3>Status Update</h3>
-            <p>The admission committee has concluded its evaluation of Early Decision applicants to Wild Chicken University. Unfortunately, we are unable to offer you a place in the first-year class. Since Wild Chicken was your top choice, we understand this news is very disappointing.   
-            </p>
-            <p>
-              Given the relatively small size of the incoming class and the strength of the applicant pool, we cannot admit all of the qualified applicants who apply to Wild Chicken. You should not feel our decision reflects negatively on you or your potential as a college student. We simply are unable to admit all of the students who present a solid record of achievement.
-            </p> 
-            <button onclick="fillForm(fname, lname, admitted); party.confetti(this);">
-                Download (it takes TIME)&gt;&gt;
-              </button>
-            <br>
+          <br>
+          <h3>Status Update</h3>
+          <p>The admission committee has concluded its evaluation of Early Decision applicants to Wild Chicken University. Unfortunately, we are unable to offer you a place in the first-year class. Since Wild Chicken was your top choice, we understand this news is very disappointing.
+          </p>
+          <p>
+            Given the relatively small size of the incoming class and the strength of the applicant pool, we cannot admit all of the qualified applicants who apply to Wild Chicken. You should not feel our decision reflects negatively on you or your potential as a college student. We simply are unable to admit all of the students who present a solid record of achievement.
+          </p>
+          <div class="action"><button class="default" onclick="fillForm(fname, lname, admitted); party.confetti(this);">
+              <b>Download (it takes TIME) &gt;&gt;</b>
+            </button>
           </div>
+            
+          <br>
+        </div>
+
 
       </div>
       <script src="https://utteranc.es/client.js" repo="Mr-Sheep/WildChickenUniversity" issue-term="title" label="ADMISSION COMMENT" theme="github-light" crossorigin="anonymous" async>
       </script>
+
       <div class="footer">
-        <span><br>Wild Chicken University is committed to a policy of non-discrimination.
-          <br> If you no longer wish to continue your application to Wild Chicken, you can go <a href="https://www.mcdonalds.com/us/en-us/product/chicken-mcnuggets-4-piece.html" target="_blank">BUY </a> some Chicken McNuggets® .</span>
-        <br /> Copyleft <span class="copyleft">©</span> <a href="https://github.com/Mr-Sheep/WildChickenUniversity">Snorlax</a>, no rights reserved. Assets have their own licenses.
+        <br><br>
+        <hr>Wild Chicken University is committed to a policy of non-discrimination.
+        <a href="../privacy.html"> Privacy Policy </a>
+        <br> Copyleft <span class="copyleft">©</span> <a href="https://github.com/Mr-Sheep/WildChickenUniversity">Snorlax</a>, no rights reserved. Assets have their own licenses.
+        <br> Licensed under GPL v3, any copy or modification of the original code must also be released under the GPL v3.
       </div>
       <div style="clear: both;"></div>
     </main>
   </div>
   <script>
-      const url = new URL(document.URL);
-      const fname = url.searchParams.get("fname");
-      const lname = url.searchParams.get("lname");
-      const admitted = url.searchParams.get('admitted')==='true' ? true : false;
-      admitted ? document.getElementById('rejected').style.display = 'none': document.getElementById('admitted').style.display = 'none';
+    const url = new URL(document.URL);
+    const fname = url.searchParams.get("fname");
+    const lname = url.searchParams.get("lname");
+    const admitted = url.searchParams.get('admitted') === 'true' ? true : false;
+    admitted ? document.getElementById('rejected').style.display = 'none' : document.getElementById('admitted').style.display = 'none';
   </script>
 
   <div class="progress_box" style="visibility: hidden;"></div>
