--- a/admission/index.html
+++ b/admission/index.html
@@ -71,7 +71,7 @@
         <hr>Wild Chicken University is committed to a policy of non-discrimination.
         <a href="../privacy.html"> Privacy Policy </a>
         <br> If you no longer wish to continue your application to Wild Chicken, you can go <a href="https://www.mcdonalds.com/us/en-us/product/chicken-mcnuggets-4-piece.html" target="_blank">BUY </a> some Chicken McNuggets®.
-        <br /> Copyleft <span class="copyleft">©</span> <a href="https://github.com/Mr-Sheep/WildChickenUniversity">Snorlax</a>, no rights reserved. Assets have their own licenses.
+        <br> Copyleft <span class="copyleft">©</span> <a href="https://github.com/Mr-Sheep/WildChickenUniversity">Snorlax</a>, licensed under GPL v3. Assets have their own licenses.
       </div>
       <div style="clear: both;"></div>
     </main>
