--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
       <div class="footer">
         <a href="./privacy.html"> Privacy Policy </a>
-        <br /> Copyleft <span class="copyleft">©</span> <a href="https://github.com/Mr-Sheep/WildChickenUniversity">Snorlax</a>, no rights reserved. Assets have their own licenses.
+        <br><br> Copyleft <span class="copyleft">©</span> <a href="https://github.com/Mr-Sheep/WildChickenUniversity">Snorlax</a>, licensed under GPL v3. Assets have their own licenses.
       </div>
 
       <script src="https://utteranc.es/client.js" repo="Mr-Sheep/WildChickenUniversity" issue-term="title" label="ADMISSION COMMENT" theme="github-light" crossorigin="anonymous" async>
