--- a/admission/result.html
+++ b/admission/result.html
@@ -92,8 +92,7 @@
         <br><br>
         <hr>Wild Chicken University is committed to a policy of non-discrimination.
         <a href="../privacy.html"> Privacy Policy </a>
-        <br> Copyleft <span class="copyleft">©</span> <a href="https://github.com/Mr-Sheep/WildChickenUniversity">Snorlax</a>, no rights reserved. Assets have their own licenses.
-        <br> Licensed under GPL v3, any copy or modification of the original code must also be released under the GPL v3.
+        <br> Copyleft <span class="copyleft">©</span> <a href="https://github.com/Mr-Sheep/WildChickenUniversity">Snorlax</a>, licensed under GPL v3. Assets have their own licenses.
       </div>
       <div style="clear: both;"></div>
     </main>
