--- a/privacy.html
+++ b/privacy.html
@@ -20,13 +20,13 @@
         </div>
         <div class="content">
           <h2 class="title">Privacy Policy</h2>
-          <p> <a href="./index.html">Wild Chicken </a> is a FRONT-END ONLY project. We cannot see any of your information. 
+          <p> <a href="./index.html">Wild Chicken</a> is a FRONT-END ONLY project. We cannot see any of your information. 
           <br> We CANNOT upload any of your data to our servers(actually, we don't even have any servers lmfao) </p>
         </div>
   
         <div class="footer">
-          <a href="./privacy.html"> Privacy Policy </a>
-          <br /> Copyleft <span class="copyleft">©</span> <a href="https://github.com/Mr-Sheep/WildChickenUniversity">Snorlax</a>, no rights reserved. Assets have their own licenses.
+          <a href="./index.html"> Go Back </a>
+          <br><br> Copyleft <span class="copyleft">©</span> <a href="https://github.com/Mr-Sheep/WildChickenUniversity">Snorlax</a>, licensed under GPL v3. Assets have their own licenses.
         </div>
   
         <script src="https://utteranc.es/client.js" repo="Mr-Sheep/WildChickenUniversity" issue-term="title" label="ADMISSION COMMENT" theme="github-light" crossorigin="anonymous" async>
