--- a/admission/result.html
+++ b/admission/result.html
@@ -54,6 +54,8 @@
                 <br><br>
                 If you have any questions please reach out to us at&nbsp;
               </span><a href="mailto:ug-admission@wcu.edu.pl"><span style="color:#005f73;">ug-admission@wcu.edu.pl</span></a><span style="color:#005f73;">&nbsp;or (555) not-free and provide the following reference number: <strong>I_Want_A_University</strong>.
+                <p> Our public key can be found <a href="https://keys.openpgp.org/vks/v1/by-fingerprint/830C321A7BD2F2E238760C602D5D295C85EFB7BB">here</a>. Fingerprint: <strong>830C 321A 7BD2 F2E2 3876  0C60 2D5D 295C 85EF B7BB</strong>
+                </p>
                 <p style="color: #7f4f24;"> If you no longer wish to continue your application to Wild Chicken, you can go <a href="https://www.mcdonalds.com/us/en-us/product/chicken-mcnuggets-4-piece.html" target="_blank">BUY </a> some Chicken McNuggets®. </p>
 
               </span></span></span></div>
