--- a/index.html
+++ b/index.html
@@ -46,17 +46,18 @@
           </li>
         </ul>
         <br />
-        copied from: <a href="https://www.facebook.com/Wild-Chicken-University-170013173058220/about">Wild Chicken University on Facebook(or should we call it Meta?)</a>
+        Copied from: <a href="https://www.facebook.com/Wild-Chicken-University-170013173058220/about">Wild Chicken University on Facebook(or should we call it Meta?)</a>
 
         </p>
 
 
         <h2 class="title">Admission</h2>
-        <p> <b>NO</b> fees💰️ to apply. No supplements📝 to submit. No extra essays to write </p>
+        <p> <b>NO</b> fees💰️ to apply. <b>NO</b> supplements📝 to submit. <b>NO</b> extra essays to write.</p>
         <p> We offer <b>FREE</b> admission offers in PDF, click <a href="./admission/index.html">this link</a> to get yours today </p>
         <p>
-          If you still prefer the old portal, click <a href="./admission_old/index.html">this link</a>.
+          (If you still prefer the old portal, click <a href="./admission_old/index.html">this link</a>. We will remove it sooner or later)
         </p>
+        <p>GOOD LUCK ON YOUR COLLEGE APP</p>
 
         <h2 class="title">Disclaimers</h2>
         <ul>
@@ -64,12 +65,16 @@
           <li>The design for the admission portal is mostly copied from Northwestern since they rejected me. And I thought this can be a joke to me </li>
           <li>The content of the admission offer is copied from Stanford as I am too lazy to write them myself.</li>
           <li>The content of the rejection letter is copied from Northwestern since they are my ed school and they rejected me lmfao</li>
-          <li>No chickens were harmed during the creation of this website.</li>
-          <li>We are NOT affiliated with any educational institution. Files downloaded from WildChicken DOES NOT have ANY legal effect.</li>
-          <li>The logo and the web design(and everything also) was a parody, which according to <a href="https://www.legislation.gov.uk/uksi/2014/2356/regulation/5/made">Section 30A of the CDPA</a> fair dealing with a copyrighted work for the purposes of caricature, parody, or pastiche is allowed.</li>
-          <li>If you no longer wish to continue your application to Wild Chicken, you can go <a href="https://www.mcdonalds.com/us/en-us/product/chicken-mcnuggets-4-piece.html" target="_blank">BUY </a> some Chicken McNuggets®.</li>
-          <li>NOTHING ON THIS PAGE IS SERIOUS, except this: GOOD LUCK ON YOUR COLLEGE APP</li>
+          <li>We are <b>NOT</b> affiliated with any educational institution. Files downloaded from WildChicken <b>DOES NOT</b> have ANY legal effect. We are <b>NOT</b> responsible any files downloaded from this site.</li>
+          <li>The logo and the web design(and everything also) was a parody, which according to <strong><a href="https://www.legislation.gov.uk/uksi/2014/2356/regulation/5/made">Section 30A of the CDPA</a></strong> fair dealing with a copyrighted work for the purposes of caricature, parody, or pastiche is allowed.</li>
+          <li>If you no longer wish to continue your application to Wild Chicken, you can go <a href="https://www.mcdonalds.com/us/en-us/product/chicken-mcnuggets-4-piece.html" target="_blank">BUY</a> some <strong>Chicken McNuggets®</strong>.</li>
+          <li><b>NO</b> chickens🐓️ were harmed during the creation of this website.</li>
+          <li><b>NOTHING ON THIS PAGE IS SERIOUS</b></li>
         </ul>
+        
+        <h2 class="title">Contact</h2>
+        <p> Our public key can be found <a href="https://keys.openpgp.org/vks/v1/by-fingerprint/830C321A7BD2F2E238760C602D5D295C85EFB7BB">here</a>. <br>Fingerprint: <strong>830C 321A 7BD2 F2E2 3876  0C60 2D5D 295C 85EF B7BB</strong>
+        </p>
       </div>
 
       <div class="footer">
