--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
         </ul>
         
         <h2 class="title">Contact</h2>
-        <p> Our public key can be found <a href="https://keys.openpgp.org/vks/v1/by-fingerprint/830C321A7BD2F2E238760C602D5D295C85EFB7BB">here</a>. <br>Fingerprint: <strong>830C 321A 7BD2 F2E2 3876  0C60 2D5D 295C 85EF B7BB</strong>
+        <p> email: ug-admission#wcu.edu.pl <br>
+        Our public key can be found <a href="https://keys.openpgp.org/vks/v1/by-fingerprint/830C321A7BD2F2E238760C602D5D295C85EFB7BB">here</a>. <br>Fingerprint: <strong>830C 321A 7BD2 F2E2 3876  0C60 2D5D 295C 85EF B7BB</strong>
         </p>
       </div>
 
