set initial-scale to 0.85

--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>Wild Chicken University</title>
-  <meta charset="UTF-8" />
   <meta name="description" content="Wild Chicken University" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=0.85">
   <link rel="stylesheet" href="./assets/style.css" media="" />
   <link rel="icon" type="image/svg+xml" href="./assets/favicon.svg" />
-  <link rel="mask-icon" href="./assets/favicon.svg" color="#ff8a01" />
 </head>
 
 <body>
