--- a/privacy.html
+++ b/privacy.html
@@ -11,29 +11,31 @@
   <link rel="icon" type="image/svg+xml" href="./assets/favicon.svg" />
   <link rel="mask-icon" href="./assets/favicon.svg" color="#ff8a01" />
 </head>
+
 <body>
-    <div class="wrapper">
-      <div class="main">
-        <div class="header">
-          <h1 class="title"><a href="./index.html"><img src="./assets/Wild_Chicken_White.svg" alt="Wild Chicken University" style="height:6rem; padding-top:2.3rem; padding-left:1rem;"></a>
-          </h1>
-        </div>
-        <div class="content">
-          <h2 class="title">Privacy Policy</h2>
-          <p> <a href="./index.html">Wild Chicken</a> is a FRONT-END ONLY project. We cannot see any of your information. 
-          <br> We CANNOT upload any of your data to our servers(actually, we don't even have any servers lmfao) </p>
-        </div>
-  
-        <div class="footer">
-          <a href="./index.html"> Go Back </a>
-          <br><br> Copyleft <span class="copyleft">©</span> <a href="https://github.com/Mr-Sheep/WildChickenUniversity">Snorlax</a>, licensed under GPL v3. Assets have their own licenses.
-        </div>
-  
-        <script src="https://utteranc.es/client.js" repo="Mr-Sheep/WildChickenUniversity" issue-term="title" label="ADMISSION COMMENT" theme="github-light" crossorigin="anonymous" async>
-        </script>
+  <div class="wrapper">
+    <div class="main">
+      <div class="header">
+        <h1 class="title"><a href="./index.html"><img src="./assets/Wild_Chicken_White.svg" alt="Wild Chicken University" style="height:6rem; padding-top:2.3rem; padding-left:1rem;"></a>
+        </h1>
       </div>
-  
+      <div class="content">
+        <h2 class="title">Privacy Policy</h2>
+        <p> <a href="./index.html">Wild Chicken</a> is a FRONT-END ONLY project. We cannot see any of your information.
+          <br> We CANNOT upload any of your data to our servers(actually, we don't even have any servers lmfao)
+        </p>
+      </div>
+
+      <div class="footer">
+        <a href="./index.html"> Go Back </a>
+        <br><br> Copyleft <span class="copyleft">©</span> <a href="https://github.com/Mr-Sheep/WildChickenUniversity">Snorlax</a>, licensed under GPL v3. Assets have their own licenses.
+      </div>
+
+      <script src="https://utteranc.es/client.js" repo="WildChickenUniversity/WildChickenUniversity" issue-term="title" label="ADMISSION COMMENT" theme="github-light" crossorigin="anonymous" async>
+      </script>
     </div>
-  </body>
-  
+
+  </div>
+</body>
+
 </html>
