--- a/admission/result.html
+++ b/admission/result.html
@@ -10,19 +10,19 @@
   <script src="https://unpkg.com/pdf-lib"></script>
   <script src="https://unpkg.com/downloadjs"></script>
   <script src="https://cdn.jsdelivr.net/npm/party-js@latest/bundle/party.min.js"></script>
-  <title>Wild Chicken Applicant Status Portal</title>
+  <title>野鸡大学申请者状态门户</title>
 </head>
 
 <body>
   <header id="mini">
     <div id="top-bar">
       <div class="contain-1120 group">
-        <div id="left"><a href="https://wcu.edu.pl"><img alt="Wild Chicken University" src="../assets/Wild_Chicken_White.svg"><span class="hide-label">Wild Chicken University</span></a></div>
+        <div id="left"><a href="https://wcu.edu.pl"><img alt="野鸡大学" src="../assets/Wild_Chicken_White.svg"><span class="hide-label">W野鸡大学</span></a></div>
       </div>
     </div>
     <div class="bottom-bar contain-1120 group">
       <div id="department">
-        <h1><a href="#">Undergraduate Admissions</a></h1>
+        <h1><a href="#">本科生申请</a></h1>
       </div>
     </div>
   </header>
@@ -34,37 +34,32 @@
           <div class="part ">
             <section class="hero">
               <div class="banner_text small_text">
-                <p id="welcome">Welcome</p>
+                <p id="welcome">欢迎</p>
               </div>
           </div>
           </section>
           <ul class="subtabs">
-            <li><a class="selected" href="#" onclick="$(this).parents('ul').find('.selected').removeClass('selected'); $(this).addClass('selected');">Application Status</a></li>
+            <li><a class="selected" href="#" onclick="$(this).parents('ul').find('.selected').removeClass('selected'); $(this).addClass('selected');">申请状态</a></li>
           </ul>
         </div>
       </div>
       <br>
       <div class="part_rows_container col-1" data-col="1">
-        <div class="part "><span style="font-size:16px;"><span style="font-family:Arial,Helvetica,sans-serif;"><span style="color:#005f73;">This
-                page is your application status portal and will be used to monitor the
-                progress of your application and to communicate any important updates or
-                changes to your application. When decisions become available they will
-                also be posted here. We anticipate releasing admission decisions for
-                Early Decision candidates on December 17th.
+        <div class="part "><span style="font-size:16px;"><span style="font-family:Arial,Helvetica,sans-serif;"><span style="color:#005f73;">此页面是您的申请状态门户，将用于追踪您的申请进度并传达对您的申请的任何重要更新或更改。 当录取结果可查看时也会在此页面通知。 我们预计将于 12 月 17 日发布对早期申请者的录取决定。
                 <br><br>
-                If you have any questions please reach out to us at&nbsp;
-              </span><a><span style="color:#005f73;">ug-admission#wcu.edu.pl</span></a><span style="color:#005f73;">&nbsp; and provide the following reference number: <strong>I_Want_AN_University_Offer</strong>.
-                <p> If you care about security, our public key can be found <a href="https://keys.openpgp.org/vks/v1/by-fingerprint/830C321A7BD2F2E238760C602D5D295C85EFB7BB">here</a>. <br>Fingerprint: 830C 321A 7BD2 F2E2 3876 0C60 2D5D 295C 85EF B7BB.<br>Please <b>DO NOT</b> paste our public key's fingerprint in your email.
+                如果您有任何问题，请通过&nbsp;
+              </span><a><span style="color:#005f73;">ug-admission#wcu.edu.pl</span></a><span style="color:#005f73;">&nbsp; 联系我们并提供如下参考代码: <strong>I_Want_AN_University_Offer</strong>.
+                <p>如果您担心安全问题，您可以在 <a href="https://keys.openpgp.org/vks/v1/by-fingerprint/830C321A7BD2F2E238760C602D5D295C85EFB7BB"><b>这里</b></a>找到我们的公钥. <br>Fingerprint: 830C 321A 7BD2 F2E2 3876 0C60 2D5D 295C 85EF B7BB.<br>请<b>不要</b>将公钥指纹粘贴到您的邮箱里.
                 </p>
 
 
               </span></span></span></div>
         <div id="admitted">
           <br>
-          <h3>Status Update</h3>
-          <p>Congratulations! It is with great pleasure to offer you admission to the Wild Chicken University class of 2026. Please click on the button below to review your admission letter!</p>
+          <h3>状态更新</h3>
+          <p>恭喜！ 很高兴为您提供 2026 届野鸡大学的录取。请点击下面的按钮查看您的录取通知书！</p>
           <div class="action"><button class="default" onclick="fillForm(fname, lname, admitted); party.confetti(this);">
-              <b>Download (it takes TIME) &gt;&gt;</b>
+              <b>下载 (需要些时间) &gt;&gt;</b>
             </button>
           </div>
           <br>
@@ -72,14 +67,14 @@
 
         <div id="rejected">
           <br>
-          <h3>Status Update</h3>
-          <p>The admission committee has concluded its evaluation of Early Decision applicants to Wild Chicken University. Unfortunately, we are unable to offer you a place in the first-year class. Since Wild Chicken was your top choice, we understand this news is very disappointing.
+          <h3>状态更新</h3>
+          <p>招生委员会已经结束了对野鸡大学早期申请者的评估。 很遗憾，我们无法为您提供一年级课程的名额。 由于野鸡大学是您的首选，我们知道这个消息非常令人失望。
           </p>
           <p>
-            Given the relatively small size of the incoming class and the strength of the applicant pool, we cannot admit all of the qualified applicants who apply to Wild Chicken. You should not feel our decision reflects negatively on you or your potential as a college student. We simply are unable to admit all of the students who present a solid record of achievement.
+            鉴于新生班级规模相对较小，申请者实力雄厚，我们不能接纳所有符合条件的申请者申请野鸡大学。 您不应认为我们的决定对您或您作为大学生的潜力产生负面影响。 我们只是无法录取所有水平优异的学生。
           </p>
           <div class="action"><button class="default" onclick="fillForm(fname, lname, admitted); party.confetti(this);">
-              <b>Download (it takes TIME) &gt;&gt;</b>
+              <b>下载 (需要些时间) &gt;&gt;</b>
             </button>
           </div>
 
@@ -87,7 +82,7 @@
         </div>
 
 
-        <p style="color: #7f4f24;"> If your GPA at WCU is higher than 3.5, you may be made into a chicken nugget. <wbr />And if you no longer wish to continue your application to Wild Chicken, please go <a href="https://www.mcdonalds.com/us/en-us/product/chicken-mcnuggets-4-piece.html" target="_blank">BUY </a> some Chicken McNuggets®. </p>
+        <p style="color: #7f4f24;"> 如果您在 WCU 的绩点高于 3.5，您可能会被做成麦乐鸡。<wbr />如果您不再希望继续申请野鸡大学，您可以去 <a href="https://www.mcdonalds.com/us/en-us/product/chicken-mcnuggets-4-piece.html" target="_blank">买些麦乐鸡® </a> .
 
       </div>
       <script src="https://utteranc.es/client.js" repo="WildChickenUniversity/WildChickenUniversity" issue-term="title" label="ADMISSION COMMENT" theme="github-light" crossorigin="anonymous" async>
@@ -95,7 +90,7 @@
 
       <div class="footer">
         <br>
-        <hr>Wild Chicken University is committed to a policy of non-discrimination.
+        <hr>野鸡大学致力于非歧视政策。
         <a href="../privacy.html"> Privacy Policy </a>
         <br> Copyleft <span class="copyleft">©</span> <a href="https://github.com/Mr-Sheep/WildChickenUniversity">Snorlax</a>, licensed under GPL v3. Assets have their own licenses.
       </div>
